add endpoints get posts
