# src/posts/routes.ts
@@ -6,12 +6,16 @@ import {
   destroy,
   destroyImage,
   updateText,
+  getAllPosts,
+  getPostUser,
 } from "./controller";
 
 export const post: express.IRouter = express.Router();
 
 post.post("/create", authMiddleware, createPost);
+post.post("/add_image", authMiddleware, addPostImage);
+post.get("/all", getAllPosts);
+post.get("/list", authMiddleware, getPostUser);
 post.patch("/update_text", authMiddleware, updateText);
-post.post("/add_image_post", authMiddleware, addPostImage);
-post.delete("/destroy_image_post", authMiddleware, destroyImage);
+post.delete("/destroy_image", authMiddleware, destroyImage);
 post.delete("/destroy", authMiddleware, destroy);
